--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.3",
-    "mariadb": "^3.0.0"
+    "mariadb": "^3.0.0",
+    "node-ec2-metadata": "0.0.5"
   }
 }
